--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,10 @@
     justify-content: center;
 }
 
+.space-evenly {
+    justify-content: space-evenly;
+}
+
 .p-20 {
     padding: 20px;
 }
@@ -101,6 +105,50 @@
 .myCharInfo {
     font-size: 20px;
     text-align: center;
+}
+
+.shopDiv {
+    background-color: #e8e8e8;
+    height: 100vh;
+}
+
+.shopItems {
+    height: 88vh;
+    overflow-y: scroll;
+}
+
+.shopItems > div {
+    margin: 10px;
+    gap: 10px;
+}
+
+.shopItems button {
+    height: 35px;
+    border: none;
+    border-radius: 5px;
+    background-color: #464646;
+    color: #e8e8e8;
+    font-size: 15px;
+    padding: 7px 14px;
+    cursor: pointer;
+    margin-left: 10px;
+}
+
+.inventoryDiv > div {
+    margin: 10px;
+    gap: 10px;
+}
+
+.inventoryDiv button {
+    height: 35px;
+    border: none;
+    border-radius: 5px;
+    background-color: #9d0a0a;
+    color: #e8e8e8;
+    font-size: 15px;
+    padding: 7px 14px;
+    cursor: pointer;
+    margin-left: 10px;
 }
 
 
