--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,10 @@
     padding: 20px;
 }
 
+.gap-10 {
+    gap: 10px;
+}
+
 .startDiv {
     background-color: #e8e8e8;
     height: 100vh;
@@ -137,6 +141,7 @@
 .inventoryDiv > div {
     margin: 10px;
     gap: 10px;
+    align-items: center;
 }
 
 .inventoryDiv button {
@@ -149,6 +154,38 @@
     padding: 7px 14px;
     cursor: pointer;
     margin-left: 10px;
+}
+
+.modal {
+    background-color: gray;
+    border-radius: 5px;
+    min-width: 150px;
+    height: 100px;
+    color: #e8e8e8;
+    font-size: 20px;
+    box-shadow: 0 0 10px 2px #000000;
+
+}
+
+.closeModal {
+    background-color: #e8e8e8;
+    color: #808080;
+    margin: 5px;
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+    font-weight: 900;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    transition: 0.1s;
+}
+
+.closeModal:hover {
+    background-color: #464646;
+    transition: 0.1s;
+    color: #e8e8e8;
 }
 
 
