--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,14 @@
     padding: 20px;
 }
 
+.mt-160 {
+    margin-top: 160px;
+}
+
+.mr-20 {
+    margin-right: 20px;
+}
+
 .gap-10 {
     gap: 10px;
 }
@@ -188,5 +196,76 @@
     color: #e8e8e8;
 }
 
+.arena {
+    height: 100vh;
+    background-color: #e8e8e8;
+}
+
+.fightBtn {
+    height: 100px;
+    font-size: 30px;
+    padding: 0 30px;
+    border: 8px solid #9d9d9d;
+    color: #676767;
+    cursor: pointer;
+    margin-top: 250px;
+    transition: 0.2s;
+    font-family: monospace;
+}
+
+.fightBtn:hover {
+    background-color: #9d9d9d;
+    color: white;
+    transition: 0.2s;
+}
+
+.monster {
+    font-size: 20px;
+}
+
+.monsterImg {
+    width: 350px;
+}
+
+.monsterAbout {
+    font-size: 20px;
+    text-align: center;
+}
+
+.potionsInArena {
+    padding: 40px 20px;
+    font-size: 20px;
+    flex-wrap: wrap;
+}
+
+.potionsInArena > div {
+    gap: 10px;
+    margin-right: 40px;
+    margin-bottom: 10px;
+}
+
+.drinkBtn {
+    border: none;
+    cursor: pointer;
+    background-color: seagreen;
+    color: white;
+    padding: 5px;
+    margin-top: 5px;
+    border-radius: 5px
+}
+
+.droppedItems {
+    height: 500px;
+    padding: 20px;
+    width: 90%;
+    background-color: #adadad;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
+.droppedItems > div {
+
+}
 
 
