--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,10 @@
     gap: 10px;
 }
 
+.br-left-none {
+    border-left: none !important;
+}
+
 .startDiv {
     background-color: #e8e8e8;
     height: 100vh;
@@ -242,6 +246,25 @@
     gap: 10px;
     margin-right: 40px;
     margin-bottom: 10px;
+}
+
+.healthAndEnergyInfo {
+    margin-top: 3px;
+    font-weight: 900;
+    font-size: 15px;
+    color: #444141;
+}
+
+.messageDiv {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    height: 50px;
+    width: 100vh;
+    font-size: 30px;
+    position: absolute;
+    top: 5vh;
+    color: #575757;
 }
 
 .drinkBtn {
