--- a/src/App.css
+++ b/src/App.css
@@ -52,7 +52,7 @@
 
 .startDiv {
     background-color: #e8e8e8;
-    height: 100vh;
+    min-height: 100vh;
     padding-top: 150px;
     display: flex;
     flex-direction: column;
@@ -115,7 +115,7 @@
 
 .mainPage {
     background-color: #e8e8e8;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .myCharInfo {
@@ -125,7 +125,7 @@
 
 .shopDiv {
     background-color: #e8e8e8;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .shopItems {
@@ -201,7 +201,7 @@
 }
 
 .arena {
-    height: 100vh;
+    min-height: 100vh;
     background-color: #e8e8e8;
 }
 
