--- a/src/App.css
+++ b/src/App.css
@@ -317,3 +317,13 @@
     cursor: pointer;
     margin-left: 10px;
 }
+
+.emptySlot {
+    height: 100px;
+    width: 275px;
+    border: 3px solid #b0b0b0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0px 0px 7px 2px #6b6b6b;
+}
